// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image Component > props.fit is equal to contain 1`] = `
<img
  alt=""
  class="t-image t-image--fit-contain t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to cover 1`] = `
<img
  alt=""
  class="t-image t-image--fit-cover t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to fill 1`] = `
<img
  alt=""
  class="t-image t-image--fit-fill t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to none 1`] = `
<img
  alt=""
  class="t-image t-image--fit-none t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to scale-down 1`] = `
<img
  alt=""
  class="t-image t-image--fit-scale-down t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > props.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</div>
`;

exports[`Image Component > props.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > slots.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > slots.overlay-content works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`Image Component > slots.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`Image Component > slots.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;
